# meta-signal-mirror

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  skills.md
schema/: lib.schema
src/: lib.rs
src/schema/: lib.rs
tests/: round_trip.rs
