[package]
name         = "meta-signal-mirror"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/meta-signal-mirror"
description  = "Meta policy contract for the sema version-control mirror."
publish      = false
links        = "meta-signal-mirror"
build        = "build.rs"

[lib]
name = "meta_signal_mirror"
path = "src/lib.rs"

[features]
default = ["nota-text"]
nota-text = ["dep:nota", "signal-frame/nota-text"]

[dependencies]
nota    = { package = "nota", git = "https://github.com/LiGoldragon/nota-next.git", branch = "main", optional = true }
rkyv         = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", default-features = false }
thiserror    = "2"

[build-dependencies]
schema-rust = { package = "schema-rust", git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "main" }

[dev-dependencies]
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
tempfile  = "3"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
